# fusion-lap-sdk

./: .gitignore  CLAUDE.md  README.md  domains.yaml  llms.txt  patches.yaml  pyproject.toml
docs/: fusion-lap-design.md  fusion-research.md  lap-research.md
docs/plans/: 2026-03-16-fusion-lap-converter.md
fusion_lap/: __init__.py  __main__.py  build.py  discover.py  enrich.py  ir.py  mcp_server.py  patches.py  render.py  scraper.py  stubs.py
lap/: fusion-assembly.lap  fusion-base.lap  fusion-bodies.lap  fusion-cam.lap  fusion-core.lap  fusion-drawing.lap  fusion-features.lap  fusion-gotchas.lap  fusion-graph.lap  fusion-misc.lap  fusion-sketch.lap  fusion-ui.lap
tests/: test_build.py  test_discover.py  test_e2e.py  test_enrich.py  test_ir.py  test_mcp_server.py  test_patches.py  test_render.py  test_scraper.py  test_stubs.py
tests/fixtures/fake_adsk/: core.pyi  fusion.pyi
tests/fixtures/html/: ExtrudeFeature.htm
