[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-lap"
version = "0.1.0"
description = "Compressed LLM-optimized API reference for Autodesk Fusion SDK"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
fusion-lap = "fusion_lap.__main__:cli"
